force-app/main/default/objects/TestAccountName__c/TestAccountName__c.object-meta.xml
<CustomObject>
    <label>TestAccountName</label>
    <nameField>
        <label>TestAccountName Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestAccountNames</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>