force-app/main/default/objects/TestAccountName__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TestAccountNames</relationshipLabel>
    <relationshipName>TestAccountNames</relationshipName>
    <type>Lookup</type>
</CustomField>