force-app/main/default/objects/TestAccountName__c/fields/DeletedAccountId__c.field-meta.xml
<CustomField>
    <fullName>DeletedAccountId__c</fullName>
    <label>DeleteAccountId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>